tests/ui/attributes/doc-test-literal.rs
#![doc(test(""))]
//~^ ERROR `#![doc(test(...)]` does not take a literal

fn main() {}
